# bg-reco

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
bgg-pull/: main.py
notebooks/: bgg_api.ipynb  db_exploration.ipynb  model_training.ipynb
src/: Dockerfile  api.py  config.py  evaluate.py  game_builder.py  inference.py  model.py  preprocessing.py  reco.py  test.py  train.py  user_builder.py
